Fixed copyright div overlap

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -7,16 +7,22 @@
     background: #ff502f;
     min-height: 100%;
     padding-bottom: 60px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
 }
 
+nav {
+    grid-column: 2;
+}
 .App-footer nav a{
     padding: 10px;
     padding-top: 0px;
     color: white;
-    display: inline-block;
     font-size: x-large;
     font-family: 'Carter One', cursive;
     text-decoration: none;
+
 }
 
 .App-footer	nav a:hover {
@@ -24,7 +30,8 @@
 }
 
 .Copyright {
-	position: absolute;
 	text-align: center;
-	padding-top: 90px;
+	padding: 15px;
+  grid-row: 2;
+  grid-column: 2;
 }
